# RH_chatbot

./: README.md
rh_chatbot/: README.md  pyproject.toml
rh_chatbot/src/rh_chatbot/: crew.py  main.py
rh_chatbot/src/rh_chatbot/config/: agents.yaml  tasks.yaml
